# mystique

./: .coveragerc  .flake8  .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.rst  pyproject.toml  pytest.ini
src/: lib.rs
src/mystique/: __init__.py  base.py  kirby.py  synthetic_control.py  utils.py
tests/: constants.py  test_rust.py
